--- a/src/components/ContactItem/ContactItem.module.css
+++ b/src/components/ContactItem/ContactItem.module.css
@@ -3,6 +3,11 @@
 }
 
 .button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-left: auto;
+  margin-right: 20px;
   padding: 4px 10px;
   border: 1px solid wheat;
   border-radius: 10px;
@@ -12,7 +17,6 @@
 
 .button:hover,
 .button:focus {
-  color: blue;
-  border-color: blue;
-  background-color: wheat;
+  color: rgb(6, 255, 247);
+  border-color: rgb(6, 255, 247);
 }
