--- a/src/components/ContactItem/ContactItem.module.css
+++ b/src/components/ContactItem/ContactItem.module.css
@@ -7,7 +7,7 @@
   align-items: center;
   justify-content: center;
   margin-left: auto;
-  margin-right: 20px;
+  margin-right: 10px;
   padding: 4px 10px;
   border: 1px solid wheat;
   border-radius: 10px;
@@ -19,4 +19,8 @@
 .button:focus {
   color: rgb(6, 255, 247);
   border-color: rgb(6, 255, 247);
+}
+
+.input {
+  width: 120px;
 }
