--- a/src/components/Container/Container.module.css
+++ b/src/components/Container/Container.module.css
@@ -1,5 +1,8 @@
 .container {
-  width: 400px;
+  width: 80vw;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 0 20px;
   background-color: rgb(84, 82, 82);
   border-radius: 20px;
   padding: 30px 0;
