--- a/src/components/Container/Container.module.css
+++ b/src/components/Container/Container.module.css
@@ -5,7 +5,6 @@
   padding: 0 20px;
   background-color: rgb(84, 82, 82);
   border-radius: 20px;
-  padding: 30px 0;
   margin-bottom: 30px;
 }
 
@@ -15,4 +14,5 @@
   padding: 0;
   margin: 0;
   margin-bottom: 30px;
+  padding-top: 30px;
 }
