--- a/src/components/ContactItem/ContactItem.module.css
+++ b/src/components/ContactItem/ContactItem.module.css
@@ -1,3 +1,4 @@
+/* created by Irina Shushkevych */
 .itemText {
   margin-right: 20px;
 }
@@ -6,7 +7,6 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  /* margin-left: auto; */
   margin-right: 6px;
   padding: 4px 10px;
   border: 1px solid wheat;
