--- a/src/components/Container/Container.module.css
+++ b/src/components/Container/Container.module.css
@@ -1,4 +1,6 @@
+/* created by Irina Shushkevych */
 .container {
+  position: relative;
   width: 80vw;
   margin-left: auto;
   margin-right: auto;
