--- a/src/components/ContactItem/ContactItem.module.css
+++ b/src/components/ContactItem/ContactItem.module.css
@@ -28,3 +28,15 @@
 .input {
   width: 120px;
 }
+
+.row {
+  display: flex;
+}
+
+.cell {
+  display: flex;
+  padding: 0;
+  text-align: left;
+  width: 33%;
+  padding: 10px 0;
+}
