--- a/src/components/Contacts/Contacts.module.css
+++ b/src/components/Contacts/Contacts.module.css
@@ -15,3 +15,20 @@
 .item:not(:last-child) {
   margin-bottom: 20px;
 }
+
+.row {
+  display: flex;
+}
+
+.rowHead {
+  display: flex;
+  border-bottom: 1px solid wheat;
+}
+
+.cell {
+  display: flex;
+  padding: 0;
+  width: 33%;
+  padding: 10px 0;
+  font-weight: bold;
+}
