--- a/src/components/Container/Container.module.css
+++ b/src/components/Container/Container.module.css
@@ -1,12 +1,24 @@
 /* created by Irina Shushkevych */
 .container {
   position: relative;
-  width: 80vw;
+  width: 450px;
+  max-width: 100vw;
   margin-left: auto;
   margin-right: auto;
   padding: 0 20px;
   background-color: rgb(84, 82, 82);
   border-radius: 20px;
+  margin-bottom: 30px;
+}
+
+.containerFull {
+  position: relative;
+  width: 100vw;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 0 20px;
+  background-color: rgb(84, 82, 82);
+  /* border-radius: 20px; */
   margin-bottom: 30px;
 }
 
