--- a/src/components/Container/Container.module.css
+++ b/src/components/Container/Container.module.css
@@ -2,7 +2,7 @@
 .container {
   position: relative;
   width: 450px;
-  max-width: 100vw;
+  max-width: 100%;
   margin-left: auto;
   margin-right: auto;
   padding: 0 20px;
@@ -13,12 +13,11 @@
 
 .containerFull {
   position: relative;
-  width: 100vw;
+  width: 100%;
   margin-left: auto;
   margin-right: auto;
   padding: 0 20px;
   background-color: rgb(84, 82, 82);
-  /* border-radius: 20px; */
   margin-bottom: 30px;
 }
 
