--- a/src/components/ContainerPage/ContainerPage.module.css
+++ b/src/components/ContainerPage/ContainerPage.module.css
@@ -3,7 +3,8 @@
   position: fixed;
   width: 100vw;
   height: 100vh;
-  overflow: scroll;
+  overflow-y: auto;
+  overflow-x: none;
   background-color: rgb(84, 82, 82);
   background-size: cover;
   background-image: url(../../image/background.jpg);
