--- a/src/components/ContactItem/ContactItem.module.css
+++ b/src/components/ContactItem/ContactItem.module.css
@@ -7,7 +7,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-right: 6px;
+
   padding: 4px 10px;
   border: 1px solid wheat;
   border-radius: 10px;
@@ -15,8 +15,8 @@
   color: wheat;
 }
 
-.button:first-of-type {
-  margin-left: auto;
+.button:not(:last-child) {
+  margin-right: 6px;
 }
 
 .button:hover,
@@ -26,7 +26,7 @@
 }
 
 .input {
-  width: 120px;
+  width: 100%;
 }
 
 .row {
@@ -35,6 +35,7 @@
 
 .cell {
   display: flex;
+  flex-wrap: wrap;
   padding: 0;
   text-align: left;
   width: 33%;
