--- a/src/components/ContainerPage/ContainerPage.module.css
+++ b/src/components/ContainerPage/ContainerPage.module.css
@@ -1,8 +1,8 @@
 /* created by Irina Shushkevych */
 .container {
   position: fixed;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   overflow-y: auto;
   overflow-x: none;
   background-color: rgb(84, 82, 82);
