--- a/src/index.css
+++ b/src/index.css
@@ -22,3 +22,14 @@ a {
   text-decoration: none;
   color: wheat;
 }
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
+  margin-bottom: 20px;
+  padding-top: 20px;
+}
