--- a/src/components/Container/Container.module.css
+++ b/src/components/Container/Container.module.css
@@ -5,8 +5,8 @@
   max-width: 100%;
   margin-left: auto;
   margin-right: auto;
-  padding: 0 20px;
-  background-color: rgb(84, 82, 82);
+  padding: 0 20px 20px;
+  background-color: rgba(84, 82, 82, 0.8);
   border-radius: 20px;
   margin-bottom: 30px;
 }
@@ -16,9 +16,9 @@
   width: 100%;
   margin-left: auto;
   margin-right: auto;
-  padding: 0 20px;
-  background-color: rgb(84, 82, 82);
+  padding: 10px 20px;
   margin-bottom: 30px;
+  background-color: rgba(84, 82, 82, 0.8);
 }
 
 .title {
