--- a/src/components/Phonebook/Phonebook.module.css
+++ b/src/components/Phonebook/Phonebook.module.css
@@ -1,23 +1,11 @@
 /* created by Irina Shushkevych */
 .mainForm {
   width: 100%;
-  padding: 0 30px 30px;
-}
-
-.label {
-  display: block;
-  font-size: 18px;
-  text-align: left;
-  margin-bottom: 20px;
-}
-
-.input {
-  display: block;
-  margin-top: 10px;
-  width: 100%;
+  padding: 0 30px;
 }
 
 .button {
+  margin-top: 10px;
   padding: 10px;
   border: 1px solid wheat;
   border-radius: 10px;
